# Client-Server-App

./: .gitignore  README.md  lesson_1.py  pyproject.toml
lesson_10/: descriptors.py  server.py  settings.py
lesson_11/: client.py  metaclasses.py  server.py  server_base.db3  server_database.py  settings.py  utils.py
lesson_12/: client.py  client_base.db3  client_database.py  launcher.py  metaclasses.py  server.py  server_base.db3  settings.py  utils.py
lesson_13/: client.py  client_base.db3  server_base.db3  server_console_interface.py  server_database.py  server_gui.py  settings.py  test.py
lesson_13/client/: client_database.py  main_window.py  main_window_conv.py  start_dialog.py  transport.py
lesson_14/: client.py  client_base.db3  descriptors.py  server.py  server_base.db3  settings.py  utils.py
lesson_14/client/: add_contact_dialog.py  del_contact.py  main_window.py  start_dialog.py  transport.py
lesson_14/log/: client_log_config.py
lesson_14/server/: add_user_window.py  config_window.py  core.py  login_history_window.py  main_window.py  remove_user_window.py  server_console_interface.py  server_database.py  stat_window.py
lesson_15/: client.py  client_base.db3  server.py  server_base.db3
lesson_15/app_utils/: descriptors.py  errors.py
lesson_3/: client.py  server.py
lesson_4/: client.py  server.py
lesson_5/: client.py  server.py
lesson_6/: client.py  server.py  settings.py  utils.py
lesson_7/: client.py  server.py  settings.py
lesson_8/: client.py  utils.py
lesson_9/: client.py  launcher.py  server.py  settings.py
(+80 files in other folders)
