[tool.poetry]
name = "async-chat"
version = "0.1.0"
description = ""
authors = ["Sego <grayg@mail.ru>"]
readme = "README.md"
packages = [{include = "async_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
chardet = "^5.1.0"
pyyaml = "6.0"
tabulate = "0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
